@@ -33,18 +33,10 @@ if ( !defined( 'MEDIAWIKI' ) ) {
  * API YAML output formatter
  * @ingroup API
  */
-class ApiFormatYaml extends ApiFormatBase {
-
-	public function __construct( $main, $format ) {
-		parent::__construct( $main, $format );
-	}
+class ApiFormatYaml extends ApiFormatJson {
 
 	public function getMimeType() {
 		return 'application/yaml';
-	}
-
-	public function execute() {
-		$this->printText( Spyc::YAMLDump( $this->getResultData() ) );
 	}
 
 	public function getDescription() {
